--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,8 @@
 @import 'base/container';
 @import './components/section-title';
 @import './components/logo';
+@import './components/burger-btn';
+@import './components/mobile-menu';
 @import './components/button';
 @import './components/current';
 @import './components/overlay';
