--- a/CSS/main.css
+++ b/CSS/main.css
@@ -342,10 +342,34 @@ body {
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
-  margin: 0 auto;
+}
+
+.header .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .section-title {
@@ -382,6 +406,39 @@ body {
 
 .logo__dark-theme {
   color: #ffffff;
+}
+
+.burger-btn {
+  border: none;
+  background-color: transparent;
+  padding: 0;
+}
+
+.burger-icon {
+  width: 40px;
+  height: 40px;
+  fill: #000;
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  width: 100vw;
+  height: 100vh;
+  max-width: 480px;
+  padding: 48px 40px;
+  background-color: wheat;
+  transform: translateY(-100%) translateX(-50%);
+  transition: transform 250ms linear;
+}
+
+.mobile-menu .cont-link {
+  display: flex;
+}
+
+.is-open {
+  transform: translateY(0) translateX(-50%);
 }
 
 .button {
@@ -693,6 +750,12 @@ body {
   outline: none;
 }
 
+.mobile-menu .close-btn {
+  width: 40px;
+  height: 40px;
+  border: none;
+}
+
 .user-data__form {
   display: flex;
   flex-direction: column;
@@ -814,62 +877,12 @@ body {
   border-bottom-color: #ececec;
 }
 
-.header .container {
-  display: flex;
-}
-
-.navigation {
-  display: flex;
-  margin-right: auto;
-}
-
 .navigation__list {
-  display: flex;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  margin-left: 93px;
-}
-
-.navigation__item:not(:first-child) {
-  margin-left: 50px;
-}
-
-.navigation__link {
-  color: var(--font-color);
-  padding-top: 32px;
-  padding-bottom: 32px;
-  transition: var(--transition-hover-focus);
-}
-
-.navigation__link:hover, .navigation__link:focus {
-  color: var(--accent-color);
-  fill: var(--accent-color);
+  display: none;
 }
 
 .cont-link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: #757575;
-  margin-left: 50px;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  display: flex;
-  align-items: center;
-  fill: #757575;
-  transition: var(--transition-hover-focus);
-}
-
-.cont-link__icon {
-  margin-right: 10px;
-}
-
-.cont-link:hover, .cont-link:focus {
-  color: var(--accent-color);
-  fill: var(--accent-color);
+  display: none;
 }
 
 .hero {
