--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -50,6 +50,11 @@
     fill: var(--accent-color);
     outline: none;
   }
+  .mobile-menu & {
+    width: 40px;
+    height: 40px;
+    border: none;
+  }
 }
 
 .user-data {
