--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,9 +1,8 @@
 .logo {
-  width: 145px;
   font-family: var(--secondary-font);
   font-weight: bold;
-  font-size: 26px;
-  line-height: 1.192;
+  font-size: 24px;
+  line-height: 1.166;
   letter-spacing: 0.03em;
   color: var(--accent-color);
   &__header {
@@ -17,3 +16,27 @@
     color: #ffffff;
   }
 }
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.192;
+  }
+}
+// .logo {
+//   font-family: var(--secondary-font);
+//   font-weight: bold;
+//   font-size: 26px;
+//   line-height: 1.192;
+//   letter-spacing: 0.03em;
+//   color: var(--accent-color);
+//   &__header {
+//     padding-top: 24px;
+//     padding-bottom: 25px;
+//   }
+//   &__light-theme {
+//     color: #000000;
+//   }
+//   &__dark-theme {
+//     color: #ffffff;
+//   }
+// }
