--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -14,7 +14,7 @@ li {
 }
 body {
   font-family: var(--main-font);
-  color: var(--font-color);
+  // color: var(--font-color);
 }
 .list {
   list-style: none;
