--- a/CSS/main.css
+++ b/CSS/main.css
@@ -5,7 +5,10 @@
   --hover-btn-color: #188ce8;
   --font-color: #212121;
   --project-card-gap: 30px;
-  --icons-color: #afb1b8;
+  --qty-project-card-colums: 3;
+  --clients-card-gap: 30px;
+  --qty-clients-colums: 2;
+  --icons-color: #AFB1B8;
   --transition-hover-focus: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -320,7 +323,6 @@ li {
 
 body {
   font-family: var(--main-font);
-  color: var(--font-color);
 }
 
 .list {
@@ -388,10 +390,13 @@ body {
   line-height: 1.178;
   text-align: center;
   letter-spacing: 0.03em;
+  margin-bottom: 30px;
 }
 
-.team .section-title {
-  margin-bottom: 30px;
+@media screen and (min-width: 1200px) {
+  .section-title {
+    margin-bottom: 50px;
+  }
 }
 
 .logo {
@@ -662,7 +667,7 @@ body {
 }
 
 .products-grid__item {
-  flex-basis: calc(100% / 3 - var(--project-card-gap));
+  flex-basis: calc(100% / (--qty-project-card-colums) - var(--project-card-gap));
   margin-left: var(--project-card-gap);
   margin-top: var(--project-card-gap);
   transition: var(--transition-hover-focus);
@@ -1184,8 +1189,10 @@ body {
   }
 }
 
-.advantages__item:not(:last-child) {
-  margin-bottom: 30px;
+@media screen and (max-width: 767px) {
+  .advantages__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 .advantages__title {
@@ -1210,8 +1217,32 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #f5f4fa;
-  margin-bottom: 30px;
   height: 120px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .advantages__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
+  .advantages__item {
+    width: 100%;
+    flex-basis: calc(100%/2 - 30px);
+    margin-top: 30px;
+    margin-left: 30px;
+  }
+  .advantages__text {
+    text-align: start;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__item {
+    flex-basis: calc(100%/6 - 30px);
+  }
 }
 
 .what-we-do {
@@ -1297,15 +1328,22 @@ body {
 
 .clients {
   display: flex;
-  margin-top: 50px;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-top: -30px;
+}
+
+.clients__item {
+  flex-basis: calc(100%/2 - 30px);
+  margin-left: 30px;
+  margin-top: 30px;
 }
 
 .clients__links {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 170px;
+  width: 100%;
   height: 90px;
   fill: var(--icons-color);
   border: 1px solid #afb1b8;
@@ -1320,6 +1358,18 @@ body {
 
 .clients__links:focus {
   outline: none;
+}
+
+@media screen and (min-width: 768px) {
+  .clients__item {
+    flex-basis: calc(100%/3 - 30px);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__item {
+    flex-basis: calc(100%/6 - 30px);
+  }
 }
 
 .footer {
