--- a/sass/components/_section-title.scss
+++ b/sass/components/_section-title.scss
@@ -4,10 +4,12 @@
   line-height: 1.178;
   text-align: center;
   letter-spacing: 0.03em;
-  .team & {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
+  @media screen and (min-width:1200px) {
+    margin-bottom: 50px;
   }
-}
+  }
+  
 
 // font-family: Roboto;
 // font-style: normal;
