--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -1,6 +1,8 @@
 .advantages {
-  &__item:not(:last-child) {
-    margin-bottom: 30px;
+  @media screen and  (max-width:767px) {
+    &__item:not(:last-child) {
+      margin-bottom: 30px;
+    }
   }
   &__title {
     font-weight: bold;
@@ -22,10 +24,39 @@
     justify-content: center;
     align-items: center;
     background-color: #f5f4fa;
-    margin-bottom: 30px;
     height: 120px;
+    margin-bottom: 30px;
+    }
+}
+@media screen and  (min-width:768px) {
+  .advantages {
+    &__list {
+      display: flex;
+      flex-wrap: wrap;
+      // flex-direction: column;
+      // align-content: center;
+      margin-top: -30px;
+      margin-left: -30px;
+    }
+      &__item {
+      width: 100%;
+      flex-basis: calc(100%/2 - 30px);
+      margin-top: 30px;
+      margin-left: 30px;
+      }
+  }
+  .advantages__text {
+    text-align: start;
   }
 }
+ 
+
+@media screen and  (min-width:1200px) {
+  .clients__item {
+    flex-basis: calc(100%/6 - 30px);
+   }
+}
+
 
 // .advantages {
 //   .container {
