--- a/sass/layout/_our-clients.scss
+++ b/sass/layout/_our-clients.scss
@@ -1,12 +1,22 @@
 .clients {
   display: flex;
-  margin-top: 50px;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-top:-30px;
+ 
+  &__item {
+    // flex-direction: column;
+    // align-self: center;
+    flex-basis: calc(100%/2 - 30px);
+    margin-left: 30px;
+    margin-top:30px;
+  }
+   
   &__links {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 170px;
+    width: 100%;
     height: 90px;
     fill: var(--icons-color);
     border: 1px solid #afb1b8;
@@ -18,7 +28,20 @@
       border: 1px solid var(--accent-color);
     }
     &:focus {
-      outline: none;
-    }
+  outline: none;
   }
+ }
+}
+
+@media screen and  (min-width:768px) {
+  .clients__item {
+    flex-basis: calc(100%/3 - 30px);
+  }
+}
+ 
+
+@media screen and  (min-width:1200px) {
+  .clients__item {
+    flex-basis: calc(100%/6 - 30px);
+   }
 }
