--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -5,7 +5,10 @@
   --hover-btn-color: #188ce8;
   --font-color: #212121;
   --project-card-gap: 30px;
-  --icons-color: #afb1b8;
+  --qty-project-card-colums: 3;
+  --clients-card-gap: 30px;
+  --qty-clients-colums: 2;
+  --icons-color: #AFB1B8;
   --transition-hover-focus: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
