--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -1,9 +1,6 @@
 .advantages {
-  @media screen and  (max-width:767px) {
-    &__item:not(:last-child) {
-      margin-bottom: 30px;
-    }
-  }
+
+ 
   &__title {
     font-weight: bold;
     font-size: 14px;
@@ -28,15 +25,18 @@
     margin-bottom: 30px;
     }
 }
-@media screen and  (min-width:768px) {
+@media screen and  (max-width:767px) {
+  .advantages__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width:768px) {
   .advantages {
     &__list {
       display: flex;
       flex-wrap: wrap;
-      // flex-direction: column;
-      // align-content: center;
       margin-top: -30px;
-      margin-left: -30px;
+      // margin-left: -30px;
     }
       &__item {
       width: 100%;
@@ -52,9 +52,9 @@
  
 
 @media screen and  (min-width:1200px) {
-  .clients__item {
-    flex-basis: calc(100%/6 - 30px);
-   }
+      .advantages__item {
+      flex-basis: calc(100%/4 - 30px);
+    }
 }
 
 
