--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -6,9 +6,7 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-    &:not(:last-child) {
-      margin-bottom: 30px;
-    }
+  
   }
   &__label {
     padding-top: 30px;
@@ -33,6 +31,43 @@
     height:auto;
     max-width: 100%;
   }
+}
+@media screen and  (max-width:767px) {
+  .team__item:not(:last-child) {
+    margin-bottom: 30px;
+  }}
+
+@media screen and (min-width: 768px) {
+
+  .team__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
+  .team__item {
+    width: 100%;
+    flex-basis: calc(100%/2 - 30px);
+    margin-top: 30px;
+    margin-left: 30px;
+    }
+
+  
+}
+
+@media screen and (min-width: 1200px) {
+  .team__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
+  .team__item {
+    width: 100%;
+    flex-basis: calc(100%/4 - 30px);
+    margin-top: 30px;
+    margin-left: 30px;
+    }
 }
 
 // .team {
