--- a/CSS/main.css
+++ b/CSS/main.css
@@ -679,7 +679,7 @@ body {
 
 .social {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   padding-left: 32px;
   padding-right: 32px;
   margin-top: 16px;
@@ -758,10 +758,6 @@ body {
   color: #ffffff;
 }
 
-.submit-box {
-  margin-left: 93px;
-}
-
 .submit-box__tittle {
   font-family: var(--main-font);
   margin-bottom: 20px;
@@ -774,12 +770,8 @@ body {
   color: #ffffff;
 }
 
-.submit-box__form {
-  display: flex;
-}
-
 .submit-box__input {
-  width: 358px;
+  width: 100%;
   height: 50px;
   margin-right: 12px;
   padding: 16px 15px;
@@ -790,6 +782,28 @@ body {
   /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15)); */
   border-radius: 4px;
   background-color: rgba(0, 0, 0, 0);
+}
+
+@media screen and (max-width: 1199px) {
+  .submit-box__input {
+    width: 100%;
+  }
+  .submit-box__form .button {
+    margin: 0 auto;
+    margin-top: 20px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .submit-box {
+    margin-left: 93px;
+  }
+  .submit-box__form {
+    display: flex;
+  }
+  .submit-box__input {
+    width: 358px;
+  }
 }
 
 .backdrop {
@@ -1244,44 +1258,48 @@ body {
   }
 }
 
-.what-we-do {
-  padding-top: 0px;
+@media screen and (max-width: 1199px) {
+  .what-we-do {
+    display: none;
+  }
 }
 
-.what-we-do__list {
-  display: flex;
-}
-
-.what-we-do__item {
-  position: relative;
-}
-
-.what-we-do__item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.what-we-do__text {
-  position: absolute;
-  left: 0;
-  bottom: 0px;
-  width: 100%;
-  height: 70px;
-  padding-top: 27px;
-  padding-bottom: 27px;
-  font-family: var(--main-font);
-  font-style: normal;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.14;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #ffffff;
-  background: rgba(47, 48, 58, 0.8);
-}
-
-.what-we-do__img {
-  display: block;
+@media screen and (min-width: 1200px) {
+  .what-we-do {
+    display: block;
+    padding-top: 0px;
+  }
+  .what-we-do__list {
+    display: flex;
+  }
+  .what-we-do__item {
+    position: relative;
+  }
+  .what-we-do__item:not(:last-child) {
+    margin-right: 30px;
+  }
+  .what-we-do__text {
+    position: absolute;
+    left: 0;
+    bottom: 0px;
+    width: 100%;
+    height: 70px;
+    padding-top: 27px;
+    padding-bottom: 27px;
+    font-family: var(--main-font);
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #ffffff;
+    background: rgba(47, 48, 58, 0.8);
+  }
+  .what-we-do__img {
+    display: block;
+  }
 }
 
 .team {
@@ -1409,15 +1427,6 @@ body {
   padding-bottom: 60px;
 }
 
-.footer__contacts {
-  margin-left: 70px;
-}
-
-.footer__container {
-  display: flex;
-  align-items: baseline;
-}
-
 .footer__social-title {
   font-style: var(--main-font);
   font-weight: bold;
@@ -1426,6 +1435,37 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
+}
+
+@media screen and (max-width: 1199px) {
+  .footer {
+    text-align: center;
+  }
+  .footer__contacts {
+    margin-bottom: 60px;
+  }
+  .footer__social {
+    margin-bottom: 60px;
+    align-items: baseline;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer-wraper {
+    display: flex;
+    justify-content: space-around;
+    align-items: baseline;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__social {
+    margin-left: 70px;
+  }
+  .footer__container {
+    display: flex;
+    align-items: baseline;
+  }
 }
 
 .portfolio .section {
