--- a/sass/components/_social-links.scss
+++ b/sass/components/_social-links.scss
@@ -1,6 +1,7 @@
 .social {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+
   padding-left: 32px;
   padding-right: 32px;
   margin-top: 16px;
