--- a/sass/components/_submit-box.scss
+++ b/sass/components/_submit-box.scss
@@ -1,6 +1,5 @@
 .submit-box {
-  margin-left: 93px;
-  &__tittle {
+    &__tittle {
     font-family: var(--main-font);
     margin-bottom: 20px;
     font-style: normal;
@@ -11,11 +10,9 @@
     text-transform: uppercase;
     color: #ffffff;
   }
-  &__form {
-    display: flex;
-  }
+  
   &__input {
-    width: 358px;
+    width: 100%;
     height: 50px;
 
     margin-right: 12px;
@@ -29,4 +26,28 @@
     border-radius: 4px;
     background-color: rgba(0, 0, 0, 0);
   }
+}
+@media screen and (max-width: 1199px) {
+  .submit-box__input {
+    width: 100%;
+  }
+  .submit-box__form {
+    & .button {
+      margin: 0 auto;
+      margin-top: 20px;
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .submit-box {    
+  margin-left: 93px;
+  &__form {
+    display: flex;
+  }
+  }
+  .submit-box__input {
+  width: 358px;
+
+}
 }
