--- a/sass/layout/_what-we-do.scss
+++ b/sass/layout/_what-we-do.scss
@@ -1,35 +1,46 @@
-.what-we-do {
-  padding-top: 0px;
-  &__list {
-    display: flex;
-  }
-  &__item {
-    position: relative;
-    &:not(:last-child) {
-      margin-right: 30px;
-    }
-  }
-  &__text {
-    position: absolute;
 
-    left: 0;
-    bottom: 0px;
-    width: 100%;
-    height: 70px;
-    padding-top: 27px;
-    padding-bottom: 27px;
-    font-family: var(--main-font);
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 1.14;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #ffffff;
-    background: rgba(47, 48, 58, 0.8);
+@media screen and (max-width: 1199px) {
+  .what-we-do {
+    display: none;
   }
-  &__img {
+  }
+
+@media screen and (min-width: 1200px) {
+
+  .what-we-do {
     display: block;
+    padding-top: 0px;
+    &__list {
+      display: flex;
+    }
+    &__item {
+      position: relative;
+      &:not(:last-child) {
+        margin-right: 30px;
+      }
+    }
+    &__text {
+      position: absolute;
+  
+      left: 0;
+      bottom: 0px;
+      width: 100%;
+      height: 70px;
+      padding-top: 27px;
+      padding-bottom: 27px;
+      font-family: var(--main-font);
+      font-style: normal;
+      font-weight: bold;
+      font-size: 14px;
+      line-height: 1.14;
+      text-align: center;
+      letter-spacing: 0.03em;
+      text-transform: uppercase;
+      color: #ffffff;
+      background: rgba(47, 48, 58, 0.8);
+    }
+    &__img {
+      display: block;
+    }
   }
 }
