--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -136,8 +136,15 @@
   .tel-icon--size {
     width: 10px;
     height: 16px;
+    margin-top: 1px;
   }
 }
+// @media screen and (min-width: 1200px) {
+//   .tablet-conts {
+//     align-items: baseline;
+//   }}
+  
+// // }
 
 // .header {
 //   display: flex;
