--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,5 +1,6 @@
 .mobile-menu {
   position: fixed;
+  z-index: 10000;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -61,7 +62,7 @@
 }
 .mobile-menu-social {
   margin-top: 72px;
-  // max-width: 357px;
+  max-width:50vw;
   display: flex;
   justify-content: space-between;
   &__link {
@@ -79,7 +80,8 @@
 }
 .mobile-menu-social__item:not(:last-child)::after {
   content: '';
-  margin-left: auto;
+  margin-left: 10px;
+  margin-right: 10px;
   width: 1px;
   height: 22px;
   border: none;
