--- a/sass/components/_product-card.scss
+++ b/sass/components/_product-card.scss
@@ -1,6 +1,6 @@
 .product-card {
-  display: block;
   &__label {
+    flex-grow: 1;
     padding: 20px 24px;
     border-style: solid;
     border-color: #eeeeee;
@@ -21,5 +21,19 @@
     letter-spacing: 0.03em;
     color: #757575;
     margin-top: 4px;
+  }
+}
+@media screen and (max-width: 479px) {
+  .overlay__text {
+    font-size: 4vw;
+  }
+  .product-card__title{
+    font-size: 3.9vw;
+  }
+  .product-card__desc {
+    font-size: 3.4vw;
+  }
+  .portfolio__buttons-link{
+    font-size: 3.4vw;
   }
 }
