--- a/sass/components/_products-grid.scss
+++ b/sass/components/_products-grid.scss
@@ -1,12 +1,11 @@
-.products-grid {
+.products-grid__link {
   display: flex;
-  flex-wrap: wrap;
-  margin-left: calc(-1 * var(--project-card-gap));
-  margin-top: calc(-1 * var(--project-card-gap));
-  &__item {
-    flex-basis: calc(100% / (--qty-project-card-colums) - var(--project-card-gap));
-    margin-left: var(--project-card-gap);
-    margin-top: var(--project-card-gap);
+  flex-direction: column;
+  height: 100%; 
+  
+}
+.products-grid__item {
+    width: 100%;
     transition: var(--transition-hover-focus);
     &:hover,
     &:focus {
@@ -14,4 +13,36 @@
         0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
     }
   }
+  .product-card {
+    max-width: 100%;
+  }
+@media screen and (max-width: 767px) {
+  .portfolio__buttons-list{
+  justify-content: left;
+}
+  .products-grid__item:not(:last-child){
+  margin-bottom: 30px;
+}
+}
+@media screen and (min-width: 768px) {
+  .products-grid {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+    &__item {
+      margin-top: 30px;
+      margin-left: 30px;
+      flex-basis: calc( 100% / 2 - 30px);
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+.products-grid {
+  &__item {
+    width: 100%;
+    flex-basis: calc( 100% / 3 - 30px);
+  }
+}
 }
