--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -36,6 +36,9 @@
 }
 
 @media screen and (min-width:1200px) {
+  .footer__contacts {
+    width: 230px;
+  }
   .footer__social {
       margin-left: 70px;
     }
