--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,5 +1,6 @@
 .hero {
-  position: relative;
+  display: flex;
+  align-items: center;
   background: #c4c4c4;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
@@ -8,21 +9,19 @@
     url(../images/tel/hero/1x/Header-img.jpg);
   background-repeat: no-repeat;
   background-size: auto;
-  display: block;
+
   max-width: 480px;
   height: 400px;
   margin: 0 auto;
   background-position: 50% 50%;
   &__slogan-container {
-    position: absolute;
+    max-width: 360px;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
+    align-self: center;
+   
     text-align: center;
-
     text-transform: uppercase;
     color: #ffffff;
   }
@@ -90,6 +89,9 @@
     &__slogan-text {
       font-size: 44px;
       line-height: 1.36;
+    }
+    &__slogan-container {
+      max-width: 696px;
     }
   }
   @media (min-device-pixel-ratio: 2),
