--- a/sass/layout/_portpholio-main.scss
+++ b/sass/layout/_portpholio-main.scss
@@ -1,19 +1,22 @@
+
 .portfolio {
   .section {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
   &__buttons-list {
     display: flex;
-    justify-content: center;
-    margin-bottom: 50px;
+    flex-wrap: wrap;
+    margin-bottom: 40px;
   }
-  &__buttons-item:not(:last-child) {
-    margin-right: 8px;
+  &__buttons-item {
+    margin-right: 8px;    
+    &:not(:last-child){
+    margin-bottom: 15px;
   }
+    }
   &__buttons-link {
-    height: 38px;
-    background: #f5f4fa;
+     background: #f5f4fa;
     border-radius: 4px;
     font-weight: 500;
     font-size: 16px;
@@ -31,6 +34,57 @@
       box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
         0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
       outline: none;
-    }
+  }
   }
 }
+   @media screen and (min-width: 768px) {
+    .portfolio__buttons-list {
+      flex-wrap: nowrap;
+      justify-content: center;
+   }
+  }
+  @media screen and (min-width: 1200px) {
+    .portfolio .section {
+              padding-top: 94px;
+        padding-bottom: 94px;
+      }
+      }
+  
+
+
+// .portfolio {
+//   .section {
+//     padding-top: 94px;
+//     padding-bottom: 94px;
+//   }
+//   &__buttons-list {
+//     display: flex;
+//     justify-content: center;
+//     margin-bottom: 50px;
+//   }
+//   &__buttons-item:not(:last-child) {
+//     margin-right: 8px;
+//   }
+//   &__buttons-link {
+//     height: 38px;
+//     background: #f5f4fa;
+//     border-radius: 4px;
+//     font-weight: 500;
+//     font-size: 16px;
+//     line-height: 1.62;
+//     border-style: hidden;
+//     text-align: center;
+//     letter-spacing: 0.03em;
+//     cursor: pointer;
+//     padding: 6px 22px;
+//     transition: var(--transition-hover-focus);
+//     &:hover,
+//     &:focus {
+//       color: #ffffff;
+//       background: var(--accent-color);
+//       box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+//         0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+//       outline: none;
+//     }
+//   }
+// }
