--- a/CSS/main.css
+++ b/CSS/main.css
@@ -873,8 +873,6 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 528px;
-  height: 581px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -896,6 +894,19 @@ body {
   margin-top: 30px;
   padding: 10px 0px;
   align-self: center;
+}
+
+@media screen and (max-width: 479px) {
+  .modal__text {
+    font-size: 4.2vw;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .close-btn {
