--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -5,8 +5,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 528px;
-  height: 581px;
+  // max-width: 450px;
+  // max-height: 609px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -28,6 +28,18 @@
     padding: 10px 0px;
     align-self: center;
   }
+}
+@media screen and (max-width: 479px) {
+.modal__text {
+  font-size: 4.2vw;
+}
+}
+
+@media screen and (min-width: 1200px) {  
+  .modal {  
+    width: 528px;
+    height: 581px;
+}
 }
 .close-btn {
   position: absolute;
