--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,12 +1,12 @@
 .modal {
-  position: absolute;
+  position: relative;
   display: flex;
   flex-direction: column;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  // max-width: 450px;
-  // max-height: 609px;
+  max-width: 450px;
+  max-height: 609px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -50,11 +50,14 @@
 }
 }
 
-@media screen and (min-width: 1200px) {  
-  .modal {  
-    width: 528px;
-    height: 581px;
-}
+
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    position: fixed;
+    max-width: 528px;
+    max-height: 581px;
+  }
 }
 .close-btn {
   position: absolute;
