--- a/sass/components/_section-title.scss
+++ b/sass/components/_section-title.scss
@@ -9,6 +9,11 @@
     margin-bottom: 50px;
   }
   }
+  @media screen and (min-width:768px) {
+    .section-title {
+      font-size: 36px;
+    }
+  }
   
 
 // font-family: Roboto;
