--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -8,7 +8,7 @@
     ),
     url(../images/tel/hero/1x/Header-img.jpg);
   background-repeat: no-repeat;
-  background-size: auto;
+  background-size: cover;
 
   max-width: 480px;
   height: 400px;
@@ -60,7 +60,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../images/tablet/hero/1x/Header-img.jpg);
+      url(../../images/tablet/hero/1x/Header-img.jpg);
     background-size: cover;
   }
   @media (min-device-pixel-ratio: 2),
@@ -72,7 +72,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../images/tablet/hero/2x/Header-img@2x.jpg);
+        url(../../images/tablet/hero/2x/Header-img@2x.jpg);
     }
   }
 }
@@ -85,7 +85,7 @@
         rgba(47, 48, 58, 0.4)
       ),
       url(../images/comp/hero/1x/Img.jpg);
-    background-size: auto;
+    background-size: cover;
     &__slogan-text {
       font-size: 44px;
       line-height: 1.36;
