--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -29,36 +29,6 @@
     align-self: center;
   }
 }
-@media screen and (max-width: 479px) {
-  .modal-checkbox__label {
-    flex-wrap: wrap;
-    line-height: 1.5;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .modal-checkbox__label {
-    font-size: 14px;
-    line-height: 1.71;
-  }
-}
-
-
-@media screen and (max-width: 479px) {
-.modal__text {
-  font-size: 4.2vw;
-}
-}
-
-
-
-@media screen and (min-width: 1200px) {
-  .modal {
-    position: fixed;
-    max-width: 528px;
-    max-height: 581px;
-  }
-}
 .close-btn {
   position: absolute;
   display: flex;
@@ -142,7 +112,7 @@
 }
 .modal-checkbox__link {
   font-family: var(--main-font);
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--accent-color);
@@ -152,7 +122,7 @@
   justify-content: center;
   align-items: center;
   font-family: var(--main-font);
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
@@ -192,3 +162,35 @@
     color: rgba(117, 117, 117, 0.5);
   }
 }
+
+@media screen and (max-width: 479px) {
+  .modal-checkbox__label {
+    flex-wrap: wrap;
+    line-height: 1.5;
+  }
+}
+
+
+
+@media screen and (max-width: 479px) {
+  .modal__text {
+    font-size: 4.2vw;
+  }
+}
+
+
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    position: fixed;
+    max-width: 528px;
+    max-height: 581px;
+  }
+    .modal-checkbox__label {
+      font-size: 14px;
+      line-height: 1.71;
+    }
+    .modal-checkbox__link {
+      font-size: 14px;
+    }
+  }
