--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,3 +1,4 @@
+
 .mobile-menu {
   position: fixed;
   z-index: 10000;
@@ -22,6 +23,7 @@
       line-height: 1.176;
       letter-spacing: 0.02em;
       color: var(--accent-color);
+    
     }
     &--mail {
       padding-top: 24px;
@@ -62,9 +64,7 @@
 }
 .mobile-menu-social {
   margin-top: 72px;
-  max-width:50vw;
   display: flex;
-  justify-content: space-between;
   &__link {
     font-size: 18px;
     line-height: 1.22;
@@ -72,25 +72,33 @@
     color: var(--accent-color);
   }
   &__item {
+    position: relative;
     display: inline-flex;
     &:not(:last-child) {
-      justify-content: space-between;
+      margin-right: 20px;
+      justify-content: center;
     }
   }
 }
 .mobile-menu-social__item:not(:last-child)::after {
-  content: '';
-  margin-left: 10px;
-  margin-right: 10px;
+  display: block;
+  content: ' ';
+  position: absolute;
   width: 1px;
-  height: 22px;
-  border: none;
+  top: 0;
+  right: -10px;
+  height: 100%;
   background-color: rgba(33, 33, 33, 0.2);
 }
+.mob-current {
+  color: var(--accent-color);
+}
+
 .is-open {
   transform: translateY(0) translateX(-50%);
   opacity: 1;
 }
+
 @media screen and (min-width: 768px) {
   .mobile-menu {
     display: none;
@@ -110,5 +118,19 @@
   &:hover .burger-icon,
   &:focus .burger-icon {
     fill: var(--accent-color);
+  }
+}
+@media screen and (max-width: 479px) {
+  .mobile-menu-social__link {
+    font-size: 4vw;
+  }
+  .mobile-menu .cont-link--tel {
+  font-size: 7vw;
+  }
+  .mobile-menu .cont-link--mail {
+    font-size: 5vw;
+  }
+  .mobile-menu__link {
+    font-size: 8vw;
   }
 }
